--- a/public/About.html
+++ b/public/About.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Portofolio Saya</title>
+  <title>Tentang Saya</title>
 </head>
 <body>
   <div id="app">
     </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-  <script src="src/App.js"></script>
+  <script src="src/About.js"></script>
 </body>
 </html>
