--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,47 @@
 <html>
 <head>
   <title>Portofolio Saya</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: linear-gradient(135deg, #43cea2 0%, #185a9d 100%);
+      min-height: 100vh;
+    }
+    nav {
+      background: linear-gradient(90deg, #ff6a00 0%, #ee0979 100%);
+      padding: 20px 0;
+    }
+    nav ul {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 18px;
+      transition: color 0.3s;
+    }
+    nav ul li a:hover {
+      color: #ffe082;
+    }
+  </style>
 </head>
 <body>
-  <div id="app">
-    </div>
+  <nav>
+    <ul>
+      <li><a href="#/home">Home</a></li>
+      <li><a href="#/about">About</a></li>
+      <li><a href="#/contact">Contact</a></li>
+    </ul>
+  </nav>
+  <div id="app"></div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-  <script src="src/App.js"></script>
+  <script src="src/main.js"></script>
 </body>
 </html>
