--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,9 @@
 <body>
   <nav>
     <ul>
-      <li><a href="#/home">Home</a></li>
-      <li><a href="#/about">About</a></li>
-      <li><a href="#/contact">Contact</a></li>
+      <li><a href="/home">Home</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
     </ul>
   </nav>
   <div id="app"></div>
