menambahkan alur ke deploy

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,25 @@
 <html>
 <head>
   <title>Portofolio Saya</title>
+
+   <h1>Selamat Datang di Halaman Home portofolio</h1>
+
+    <h2>Halo, Saya Hafis Ardiyanto!</h2>
+
+    <h3>A web developper</h3>
+
+    <h4>Email<a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank" rel="noopener noreferrer">hafisardiyanto19@gmail.com</a></h4>
+
+    <ul>
+      <h5>👨‍💻 Pengalaman membangun aplikasi web modern</h5>
+      <h6> Saya seorang pengembangang web yang </h6>
+      <h7> membangun aplikasi berbasis web </h7>
+      <h8> menggunakan PHP dan JavaScript </h8>
+      <h9> Khususnya Laravel dan JQuery </h9>
+    </ul>
+
+  </div>
+
   <style>
     body {
       margin: 0;
@@ -33,6 +52,7 @@
     }
   </style>
 </head>
+
 <body>
   <nav>
     <ul>
@@ -44,5 +64,7 @@
   <div id="app"></div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
   <script src="src/main.js"></script>
+  
 </body>
+
 </html>
